--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"svelte.enable-ts-plugin": true
+	"svelte.enable-ts-plugin": true,
+	"search.exclude": {
+		"**/node_modules": false
+	},
+	"search.useGlobalIgnoreFiles": false
 }
