--- a/package.json
+++ b/package.json
@@ -8,26 +8,41 @@
 		"preview": "svelte-kit preview",
 		"prepare": "svelte-kit sync",
 		"test": "playwright test",
+		"cucumber": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js",
+		"cucumber:http": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile http",
+		"cucumber:http:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile http",
+		"cucumber:dom": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
+		"cucumber:dom:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
+		"cucumber:fullstack": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile fullstack",
+		"cucumber:fullstack:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile fullstack",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@cucumber/cucumber": "^8.1.2",
+		"@cucumber/screenplay": "^5.1.0",
 		"@playwright/test": "^1.21.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-node": "^1.0.0-next.73",
 		"@sveltejs/kit": "next",
+		"@testing-library/svelte": "^3.1.1",
 		"@types/cookie": "^0.4.1",
+		"@types/express": "^4.17.13",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"node-fetch": "^3.2.4",
+		"playwright": "^1.21.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
+		"ts-node": "^10.7.0",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
@@ -35,6 +50,7 @@
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
-		"cookie": "^0.4.1"
+		"cookie": "^0.4.1",
+		"express": "^4.18.1"
 	}
 }
