--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
+	"ts-node": { "files": true, "compilerOptions": { "strict": true, "checkJs": false } },
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
