work in progress

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 		"preview": "svelte-kit preview",
 		"prepare": "svelte-kit sync",
 		"test": "playwright test",
-		"cucumber": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js",
-		"cucumber:http": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile http",
-		"cucumber:http:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile http",
-		"cucumber:dom": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
+		"cucumber": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js",
+		"cucumber:http": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile http",
+		"cucumber:dom": "vite build --config vite.dom-session-tasks.config.js && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
 		"cucumber:dom:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
+		"cucumber:dom-http": "vite build --config vite.dom-http-tasks.config.js && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom_http",
+		"cucumber:dom-http:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom_http",
 		"cucumber:fullstack": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile fullstack",
 		"cucumber:fullstack:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile fullstack",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
@@ -27,18 +28,25 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-node": "^1.0.0-next.73",
 		"@sveltejs/kit": "next",
+		"@svitejs/vite-plugin-svelte": "^0.11.1",
 		"@testing-library/svelte": "^3.1.1",
+		"@testing-library/user-event": "^14.1.1",
 		"@types/cookie": "^0.4.1",
 		"@types/express": "^4.17.13",
+		"@types/jsdom": "^16.2.14",
+		"@types/request": "^2.48.8",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"global-jsdom": "^8.4.0",
+		"jsdom": "^19.0.0",
 		"node-fetch": "^3.2.4",
 		"playwright": "^1.21.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"request": "^2.88.2",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
