--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
 		"prepare": "svelte-kit sync",
 		"test": "playwright test",
 		"cucumber": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js",
-		"cucumber:http": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile http",
-		"cucumber:dom": "vite build --config vite.dom-session-tasks.config.js && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
-		"cucumber:dom:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom",
-		"cucumber:dom-http": "vite build --config vite.dom-http-tasks.config.js && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom_http",
-		"cucumber:dom-http:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile dom_http",
-		"cucumber:fullstack": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile fullstack",
-		"cucumber:fullstack:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm\" cucumber-js --profile fullstack",
+		"cucumber:http": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile http",
+		"cucumber:http:nobuid": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile http",
+		"cucumber:dom": "vite build --config vite.dom-session-tasks.config.js && NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile dom",
+		"cucumber:dom:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile dom",
+		"cucumber:dom-http": "vite build --config vite.dom-http-tasks.config.js && NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile dom_http",
+		"cucumber:dom-http:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile dom_http",
+		"cucumber:fullstack": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile fullstack",
+		"cucumber:fullstack:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile fullstack",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+
+    "xxx-experiment": "NODE_OPTIONS=\"--loader node-esm-loader --experimental-specifier-resolution=node\" cucumber-js",
+    "experiment": "NODE_OPTIONS=\"--loader ts-node/esm --loader esm-loader-svelte --experimental-specifier-resolution=node\" cucumber-js"
 	},
 	"devDependencies": {
 		"@cucumber/cucumber": "^8.1.2",
@@ -28,6 +32,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-node": "^1.0.0-next.73",
 		"@sveltejs/kit": "next",
+		"@sveltejs/package": "^1.0.0-next.3",
 		"@svitejs/vite-plugin-svelte": "^0.11.1",
 		"@testing-library/svelte": "^3.1.1",
 		"@testing-library/user-event": "^14.1.1",
@@ -40,8 +45,11 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"esm-loader-svelte": "^1.0.7",
+		"esm-loader-typescript": "^1.0.2",
 		"global-jsdom": "^8.4.0",
 		"jsdom": "^19.0.0",
+		"node-esm-loader": "^0.0.3",
 		"node-fetch": "^3.2.4",
 		"playwright": "^1.21.1",
 		"prettier": "^2.5.1",
