--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
 	"name": "auth-sveletekit",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev --host",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
 		"test": "playwright test",
 		"cucumber": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js",
 		"cucumber:http": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile http",
@@ -17,15 +15,12 @@
 		"cucumber:dom-http:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile dom_http",
 		"cucumber:fullstack": "npm run build && NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile fullstack",
 		"cucumber:fullstack:nobuild": "NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" cucumber-js --profile fullstack",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-
-    "xxx-experiment": "NODE_OPTIONS=\"--loader node-esm-loader --experimental-specifier-resolution=node\" cucumber-js",
-    "experiment": "NODE_OPTIONS=\"--loader ts-node/esm --loader esm-loader-svelte --experimental-specifier-resolution=node\" cucumber-js"
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
-	"devDependencies": {
+	"oldDevDependencies": {
 		"@cucumber/cucumber": "^8.1.2",
 		"@cucumber/screenplay": "^5.1.0",
 		"@playwright/test": "^1.21.0",
@@ -62,11 +57,34 @@
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
+	"devDependencies": {
+		"@playwright/test": "^1.25.0",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@types/cookie": "^0.5.1",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.46.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.1.0-beta.1"
+	},
 	"type": "module",
-	"dependencies": {
+	"oldDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
 		"express": "^4.18.1"
+	},
+	"dependencies": {
+		"@fontsource/fira-mono": "^4.5.0",
+		"cookie": "^0.4.1"
 	}
 }
